@@ -1,3 +1,4 @@
+* Added Catalan translation (thanks Lleïr Borràs i Metje)
 * Made initialization of Danish as default language and tests compatible with Rails 2.0.2 (Casper Fabricius)
 * Fixed translation in Dutch file (thanks Frank Groeneveld)
 * Added Simplified Chineese translation (thanks Capitan Zhan)
